[package]
name = "dioxus-sortable"
version = "0.1.2"
authors = ["Joshua McQuistan <joshua.mcquistan@feral.io>"]
edition = "2021"
description = "Sortable tables and components for Dioxus"
documentation = "https://docs.rs/dioxus-sortable"
repository = "https://github.com/feral-dot-io/dioxus-sortable"
license = "LGPL-3.0-or-later"
keywords = ["dioxus", "ui", "gui", "wasm"]
categories = ["wasm", "gui", "web-programming"]

[dependencies]
dioxus = { version = "0.5", features = ["desktop"] }
wasm-bindgen = "0.2"
tokio = { version = "1.37.0", features = ["default"] }

[dev-dependencies]
dioxus = { version = "0.5", features = ["web"] }
log = "0.4"
wasm-logger = "0.2"
